--- a/src/Pages/viewForm/viewForm.css
+++ b/src/Pages/viewForm/viewForm.css
@@ -155,4 +155,6 @@
       background-color: darkblue;
       color: white;
       font-weight: 600;
+      float: right;
+      margin-top: 20px;
   }
